fix mobile map z-index

--- a/pagesStyles/Contact.module.css
+++ b/pagesStyles/Contact.module.css
@@ -21,6 +21,7 @@
     height: 40vh;
     top: unset;
     bottom: 0;
+    z-index: 1;
   }
 }
 .map {
